unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/ETT_Staging_Purchase_Information__c.object-meta.xml
<CustomObject>
    <label>Staging Purchase Information</label>
    <nameField>
        <displayFormat>StagingPurchaseInfo-{000000}</displayFormat>
        <label>Staging Purchase Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Purchase Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>