unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Authorized_Person__c.field-meta.xml
<CustomField>
    <fullName>ETT_Authorized_Person__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>