unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Brand_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>We need to Take Active  Brands only.</errorMessage>
        <filterItems>
            <field>ETT_Brand_Master__c.ETT_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Staging Purchase Informations</relationshipLabel>
    <relationshipName>Staging_Purchase_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>