unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ETT_Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>