unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Purchase Informations</relationshipLabel>
    <relationshipName>Staging_Purchase_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>