unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ETT_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>120 days</fullName>
            </value>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>