unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_PurchaseInfo_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_PurchaseInfo_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Rtd-OC</fullName>
            </value>
            <value>
                <fullName>Rtd-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>