unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <formula>ETT_Tyre_Size_Master__r.ETT_Tyre_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Size</label>
    <type>Text</type>
</CustomField>