unpackaged/main/default/objects/ETT_Staging_Purchase_Information__c/fields/ETT_Tyre_Size_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Staging Purchase Informations</relationshipLabel>
    <relationshipName>Staging_Purchase_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>